--- a/about.html
+++ b/about.html
@@ -97,67 +97,38 @@
                   <div class="heading_container heading_center psudo_white_primary mb_45">
                     <h2>團隊成員</h2>
                   </div>
+                  <div style="width: 100%;">
                   <div class="d-flex justify-content-around">
 
                     <!-- <div class="owl-carousel client_owl-carousel"> -->
                     <div class="item">
-                      <div class="box" style="width: 300px;">
+                      <div class="box" style="width: 400px;">
                         <div class="img-box">
-                          <img src="images/c3.jpg" alt="" class="box-img" />
+                          <img src="images/張哲豪.jpg" alt="" class="box-img" style="width: 250px ; height: 250px;"/>
                         </div>
-                        <div class="detail-box">
-                          <h6>張哲豪</h6>
-                          <h6>英文名</h6>
-                          <p>
-                            分工狀況
+                        <div class="detail-box" style="height: 400px;">
+                          <h2>張哲豪</h2>
+                          <h4>henry703henry703@gmail.com</h4>
+                          <br>                          
+                          
+                          <p style="font-size: 20px;">
+                            專案統籌<br>模型建置<br>資料清洗<br>網路爬蟲<br>資料視覺化<br>hadoop環境建置<br>                                                      
                           </p>
 
                         </div>
                       </div>
                     </div>
                     <div class="item">
-                      <div class="box" style="width: 300px;">
+                      <div class="box" style="width: 400px;">
                         <div class="img-box">
-                          <img src="images/c2.jpg" alt="" class="box-img" />
+                          <img src="images/彭宇安.jpg" alt="" class="box-img" />
                         </div>
-                        <div class="detail-box">
-                          <h6>張哲豪</h6>
-                          <h6>英文名</h6>
-                          <p>
-                            分工狀況
-                          </p>
-
-                        </div>
-                      </div>
-                    </div>
-
-
-                    <div class="item">
-                      <div class="box" style="width: 300px;">
-                        <div class="img-box">
-                          <img src="images/c2.jpg" alt="" class="box-img" />
-                        </div>
-                        <div class="detail-box">
-                          <h6>張哲豪</h6>
-                          <h6>英文名</h6>
-                          <p>
-                            分工狀況
-                          </p>
-
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="item">
-                      <div class="box" style="width: 300px;">
-                        <div class="img-box">
-                          <img src="images/c2.jpg" alt="" class="box-img" />
-                        </div>
-                        <div class="detail-box">
-                          <h6>張哲豪</h6>
-                          <h6>英文名</h6>
-                          <p>
-                            分工狀況
+                        <div class="detail-box" style="height: 400px;">
+                          <h2>彭宇安</h2>
+                          <h4>waterblue1995@yahoo.com</h4> 
+                          <br>                            
+                          <p style="font-size: 20px;">
+                            模型建置<br>資料清洗、分析<br>網路爬蟲<br>資料視覺化<br>hadoop環境建置<br>
                           </p>
 
                         </div>
@@ -165,6 +136,45 @@
                     </div>
 
                   </div>
+                  <div class="d-flex justify-content-around">
+
+
+                    <div class="item">
+                      <div class="box" style="width: 400px;">
+                        <div class="img-box">
+                          <img src="images/吳俊億.jpg" alt="" class="box-img" />
+                        </div>
+                        <div class="detail-box" style="height: 400px;">
+                          <h2>吳俊億</h2>
+                          <h4>as8354093@gmail.com</h4> 
+                          <br>                            
+                          <p style="font-size: 20px;">
+                            資料清洗、整合<br>數據分析<br>網路爬蟲<br>資料視覺化<br>hadoop環境建置
+                          </p>
+
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="item">
+                      <div class="box" style="width: 400px;">
+                        <div class="img-box">
+                          <img src="images/王玠珣.jpg" alt="" class="box-img" />
+                        </div>
+                        <div class="detail-box" style="height: 400px;">
+                          <h2>王玠珣</h2>
+                          <h4>hks1002@hotmail.com</h4>
+                          <br>                             
+                          <p style="font-size: 20px;">
+                            資料視覺化<br>網路爬蟲<br>資料清洗<br>hadoop環境建置
+                          </p>
+
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
                 </div>
               </div>
               <!-- </div> -->
@@ -176,38 +186,14 @@
           <div class="heading_container heading_center psudo_white_primary mb_45">
             <h2>未來展望</h2>
           </div>
-          <span style=font-size:20px>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam
+          <span style=font-size:25px>
+            <br>
+            <br>            
+            1. 能即時更新財報資料，提供最新的財報資訊<br>
+            2. 排行榜頁面按照類股分類排行<br>
+            3. 可輸入資訊進行篩選，讓投資人更容易找到適合自己的標的<br>
+            4. 可選擇多間公司進行財報資訊疊圖比較<br>           
+
           </span>
         </div>
       </div>
