--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             <span style=font-size:60px> 存股預測分析 </span>
 
           </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class=""> </span>
+          </button>
 
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -83,12 +87,8 @@
                       簡介 <br />
 
                     </h1>
-                    <p>
-                      Explicabo esse amet tempora quibusdam laudantium,
-                      laborum eaque magnam fugiat hic? Esse dicta aliquid
-                      error repudiandae earum suscipit fugiat molestias,
-                      veniam, vel architecto veritatis delectus repellat modi
-                      impedit sequi.
+                    <p style="font-size: 30px;">
+                      提供當年度財報資訊排行、個股20年財報變化圖，為一個財報資訊的查詢平台，在各股資訊業面呈現我們使用模型預測的當年度除權息發放
                     </p>
                     <div class="btn-box">
 
@@ -112,12 +112,8 @@
                       排行榜 <br />
 
                     </h1>
-                    <p>
-                      Explicabo esse amet tempora quibusdam laudantium,
-                      laborum eaque magnam fugiat hic? Esse dicta aliquid
-                      error repudiandae earum suscipit fugiat molestias,
-                      veniam, vel architecto veritatis delectus repellat modi
-                      impedit sequi.
+                    <p style="font-size: 30px;">
+                      提取2020年各項財報資訊(還原殖利率、累計_現金股利、盈餘配股、股利合計、每股盈餘、稅前淨利、每股淨值、負債總額、資產總額)排行前50的公司，供投資人作為存股標的選擇的參考
                     </p>
                     <div class="btn-box">
                       <a href="ranking.html"> 立馬來看 </a>
@@ -138,15 +134,10 @@
                 <div class="col-md-7 col-lg-6">
                   <div class="detail-box">
                     <h1>
-                      個股資訊 <br />
-                      Your Business
+                      個股資訊 <br />                      
                     </h1>
-                    <p>
-                      Explicabo esse amet tempora quibusdam laudantium,
-                      laborum eaque magnam fugiat hic? Esse dicta aliquid
-                      error repudiandae earum suscipit fugiat molestias,
-                      veniam, vel architecto veritatis delectus repellat modi
-                      impedit sequi.
+                    <p style="font-size: 30px;">
+                      顯示個股2020年度殖利率發放狀況，20年間財報變化圖，供投資人做為參考使用
                     </p>
                     <div class="btn-box">
                       <a href="profile.html"> 立馬來看 </a>
