--- a/profile.html
+++ b/profile.html
@@ -121,7 +121,7 @@
             letter-spacing: 4px;font-size: 30px;">股票代碼查詢</p>
           </div>
 
-          <label>請選擇股票:
+          <label>請輸入公司代號或名稱:
             <input id="br" list="stocks" name="myBrowser" onchange="ChangeText()"></label>
           <datalist id="stocks">
           </datalist>
