--- a/ranking.html
+++ b/ranking.html
@@ -89,7 +89,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <script src="./js/app_rank.js"></script>
+          
 
           <div class="title">
             <p id="ADXR" style="margin-bottom: 40px;background-color: rgb(181, 214, 90);padding: 10px 0px 5px 5px;
@@ -98,7 +98,7 @@
 
           <!-- 選單-選排行類型 -->
           <label>請選擇財報欄位:
-            <input id="br" list="report" name="myReport" onclick="ChangeText()"></label>
+            <input id="br" list="report" name="myReport" onchange="ChangeText()"></label>
           <datalist id="report"></datalist>
         </div>
       </div>
@@ -139,6 +139,7 @@
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <script src="./js/rank.js"></script>
+  <script src="./js/app_rank.js"></script>
 
 
 
