--- a/ranking.html
+++ b/ranking.html
@@ -89,7 +89,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          
+
 
           <div class="title">
             <p id="ADXR" style="margin-bottom: 40px;background-color: rgb(181, 214, 90);padding: 10px 0px 5px 5px;
@@ -97,9 +97,9 @@
           </div>
 
           <!-- 選單-選排行類型 -->
-          <label>請選擇財報欄位:
-            <input id="br" list="report" name="myReport" onchange="ChangeText()"></label>
-          <datalist id="report"></datalist>
+          <select onchange="ChangeText()" id="br">
+            <option value="">請選擇財報欄位</option>
+          </select>
         </div>
       </div>
     </div>
