--- a/profile.html
+++ b/profile.html
@@ -139,7 +139,7 @@
 
   <section class="about_section layout_padding-bottom layout_padding2-top">
     <div class="container">
-      <div style="height: 350px;">
+      <div style="height: 450px;">
         <table style=" width : 100%" id="information"></table>
       </div>
       <div class="chart" id="chartContainer_dividend"></div>
@@ -171,11 +171,11 @@
 
 
   <!--  -->
-  <script src="./js/一般網頁.js"></script>
-  <script src="./js/金控網頁.js"></script>
-  <script src="./js/保險網頁.js"></script>
-  <script src="./js/銀行網頁.js"></script>
-  <script src="./js/證券網頁.js"></script>
+  <script src="./js/normalChart.js"></script>
+  <script src="./js/financialChart.js"></script>
+  <script src="./js/insuranceChart.js"></script>
+  <script src="./js/bankChart.js"></script>
+  <script src="./js/securityChart.js"></script>
   <!-- jQery -->
   <script src="js/jquery-3.4.1.min.js"></script>
   <!-- popper js -->
