--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                       提取2020年各項財報資訊(還原殖利率、累計_現金股利、盈餘配股、股利合計、每股盈餘、稅前淨利、每股淨值、負債總額、資產總額)排行前50的公司，供投資人作為存股標的選擇的參考
                     </p>
                     <div class="btn-box">
-                      <a href="ranking.html"> 立馬來看 </a>
+                      <a href="ranking.html"> 立即前往 </a>
                     </div>
                   </div>
                 </div>
@@ -134,13 +134,13 @@
                 <div class="col-md-7 col-lg-6">
                   <div class="detail-box">
                     <h1>
-                      個股資訊 <br />                      
+                      個股資訊 <br />
                     </h1>
                     <p style="font-size: 30px;">
                       顯示個股2020年度殖利率發放狀況，20年間財報變化圖，供投資人做為參考使用
                     </p>
                     <div class="btn-box">
-                      <a href="profile.html"> 立馬來看 </a>
+                      <a href="profile.html"> 立即前往 </a>
                     </div>
                   </div>
                 </div>
