--- a/profile.html
+++ b/profile.html
@@ -150,7 +150,7 @@
       <!-- <div>----------------------</div> -->
       <div class="chart" id="chartContainer_asset_liab"></div>
       <!-- <div>----------------------</div> -->
-      <div class="chart" id="chartContainer_asset_bvps"></div>
+      <!-- <div class="chart" id="chartContainer_asset_bvps"></div> -->
 
     </div>
   </section>
